<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/booking_details" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/sim_data_plans" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/upload_documents" />

    <item
        android:id="@+id/navigation_payment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/payment" />

    <item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/summary" />

</menu>
