<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/upload_documents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/provide_documents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/visa_document_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_visa"
        android:layout_margin="@dimen/item_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_documents" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/visa_document_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visa_document_header" >
        <CheckBox
            android:id="@+id/visa_on_arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visa_on_arrival"
            android:layout_margin="@dimen/item_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/visa_issued"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visa_issued"
            android:layout_margin="@dimen/item_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/visa_on_arrival" />

        <TextView
            android:id="@+id/upload_visa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/sym_action_email"
            android:layout_margin="@dimen/item_margin"
            android:background="@drawable/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/visa_issued" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/upload_id_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_identity_proof"
        android:padding="@dimen/item_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visa_document_layout" />

    <TextView
        android:id="@+id/upload_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/sym_action_email"
        android:layout_margin="@dimen/item_margin"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_id_header" />


    <TextView
        android:id="@+id/upload_picture_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_your_photo"
        android:padding="@dimen/item_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_id" />

    <TextView
        android:id="@+id/upload_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/sym_action_email"
        android:layout_margin="@dimen/item_margin"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_picture_header" />
</androidx.constraintlayout.widget.ConstraintLayout>